--- a/.github/test-workflow.yml
+++ b/.github/test-workflow.yml
@@ -1,3 +1,21 @@
-dsfdsf
-adsfasdf
-sadfadsf
+name: GitHub Actions Demo
+on:
+  pull_request:
+
+jobs:
+  Pull-repository-on-server:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        uses: actions/checkout@v1
+
+      - name: SCP Command to Transfer Files
+        uses: appleboy/scp-action@v0.1.2
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.KEY }}
+          source: "*"
+          target: "code"
+          rm: true
